--- a/style/default.css
+++ b/style/default.css
@@ -447,11 +447,13 @@ code {
     font-weight: bold;
 }
 
-div.quickLinks {
+div.quickLinks,
+nav.quickLinks {
     margin-left: 15px;
 }
 
-div.navigation {
+div.navigation,
+aside.navigation {
     position:fixed;
     width:245px;
     border: 1px solid rgb(204, 204, 204);
@@ -465,19 +467,24 @@ div.navigation {
     font-family: futura-pt, sans-serif;
 }
 
-div.navigation ul {
+div.navigation ul,
+aside.navigation ul {
     margin-left: 0px;
     padding-left: 20px;
 }
 
 div.navigation a:link,
 div.navigation a:visited,
-div.navigation a:hover {
+div.navigation a:hover,
+aside.navigation a:link,
+aside.navigation a:visited,
+aside.navigation a:hover {
     color: #9A9A9A;
     text-decoration: none;
 }
 
-div.document {
+div.document,
+main.document {
 /*
     background: rgb(240,240,240);
     margin-left: 255px;
@@ -500,11 +507,14 @@ div.document {
 }
 
 div.document a,
-div.document a:visited {
+div.document a:visited,
+main.document a,
+main.document a:visited {
     color: #333;
 }
 
-div.document a:hover {
+div.document a:hover,
+main.document a:hover {
     color: #FFCC03;
 }
 
@@ -602,31 +612,6 @@ body {
     height: 28px;
 }
 
-/* 
-     TM & (c) 2017 Lucasfilm Entertainment Company Ltd. and Lucasfilm Ltd.
-     All rights reserved.
-  
-     Licensed under the Apache License, Version 2.0 (the "Apache License")
-     with the following modification; you may not use this file except in
-     compliance with the Apache License and the following modification to it:
-     Section 6. Trademarks. is deleted and replaced with:
-  
-     6. Trademarks. This License does not grant permission to use the trade
-        names, trademarks, service marks, or product names of the Licensor
-        and its affiliates, except as required to comply with Section 4(c) of
-        the License and to reproduce the content of the NOTICE file.
-  
-     You may obtain a copy of the Apache License at
-  
-         http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the Apache License with the above modification is
-     distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied. See the Apache License for the specific
-     language governing permissions and limitations under the Apache License.
-*/  
-
 /*-------------------------------GENERAL STYLES-------------------------------*/
 
 html, body {
@@ -634,6 +619,11 @@ html, body {
 	padding:0;
 	font-family:Arial, Helvetica, Sans-serif;
 	background:#000;
+}
+
+/* Semantic HTML elements behave like divs by default */
+aside, nav, main, header, section, article, footer {
+	display: block;
 }
 a img {
 	border:none;
@@ -858,31 +848,6 @@ ul.creatorFooterNav li a {
 	font-weight: bold;
 	margin: 20px 0 5px;
 }
-
-/*
-     TM & (c) 2017 Lucasfilm Entertainment Company Ltd. and Lucasfilm Ltd.
-     All rights reserved.
-
-     Licensed under the Apache License, Version 2.0 (the "Apache License")
-     with the following modification; you may not use this file except in
-     compliance with the Apache License and the following modification to it:
-     Section 6. Trademarks. is deleted and replaced with:
-
-     6. Trademarks. This License does not grant permission to use the trade
-        names, trademarks, service marks, or product names of the Licensor
-        and its affiliates, except as required to comply with Section 4(c) of
-        the License and to reproduce the content of the NOTICE file.
-
-     You may obtain a copy of the Apache License at
-
-         http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the Apache License with the above modification is
-     distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied. See the Apache License for the specific
-     language governing permissions and limitations under the Apache License.
-*/
 
 /* Basic Styles
 ________________________*/
@@ -1941,30 +1906,6 @@ background: transparent;
 
 #mainContentContainer h1,#mainContentContainer h2,#mainContentContainer h3,#mainContentContainer h4,#mainContentContainer h5,#mainFooterContainer h1,#mainFooterContainer h2,#mainFooterContainer h3,#mainFooterContainer h4,#mainFooterContainer h5,#mainSubNavigation,#profilePageCreator #profileInfo h1,#profilePageCreator h1,#profilePageCreator h2,#profilePageCreator h3,#profilePageCreator h4,#profilePageCreator h5,.creatorMainNav li a,.fontFutura,.homeText h4,ol,ul.creatorFooterNav li a {font-family:"futura",sans-serif;}#mainContentContainer p,#mainFooterContainer a,#mainFooterContainer p,.fontNewsGothic,.homeText,.tk-news-gothic-std,h1.articleContentTitle,h1.articleContentTitle a,h1.articleContentTitle span{font-family:"gothic",sans-serif;}
 
-/* 
-     TM & (c) 2017 Lucasfilm Entertainment Company Ltd. and Lucasfilm Ltd.
-     All rights reserved.
-  
-     Licensed under the Apache License, Version 2.0 (the "Apache License")
-     with the following modification; you may not use this file except in
-     compliance with the Apache License and the following modification to it:
-     Section 6. Trademarks. is deleted and replaced with:
-  
-     6. Trademarks. This License does not grant permission to use the trade
-        names, trademarks, service marks, or product names of the Licensor
-        and its affiliates, except as required to comply with Section 4(c) of
-        the License and to reproduce the content of the NOTICE file.
-  
-     You may obtain a copy of the Apache License at
-  
-         http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the Apache License with the above modification is
-     distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied. See the Apache License for the specific
-     language governing permissions and limitations under the Apache License.
-*/  
 .coursewareBackground {
 	background: #efefef;
 	float: left;
@@ -2107,18 +2048,21 @@ ul.creatorFooterNav {
     max-width: none;
   }
 
-.copyrightFooter {
+.copyrightFooter,
+footer.copyrightFooter {
   font-size: 9px;
   margin-top: 25px;
   text-align: center;
   float: none;
 }
 
-  .copyrightFooter a {
+  .copyrightFooter a,
+  footer.copyrightFooter a {
     color: #666666;
   }
 
-    .copyrightFooter a:hover {
+    .copyrightFooter a:hover,
+    footer.copyrightFooter a:hover {
       color: #fff;
     }
 
