Refactor default CSS file
This changelist refactors the default CSS file, clarifying property names and removing unused elements.

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,15 +3,15 @@
       <br>
       <footer class="copyrightFooter">
         <p>
-          <a href="" style="color: #666666">TERMS OF USE</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="" style="color: #666666">PRIVACY POLICY</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="" style="color: #666666">LEGAL NOTICES</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="" style="color: #666666">CHILDREN'S ONLINE PRIVACY POLICY</a>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="" style="color: #666666">YOUR CALIFORNIA PRIVACY POLICY</a>
+          <a href="">TERMS OF USE</a>
+          <span class="footer-separator">|</span>
+          <a href="">PRIVACY POLICY</a>
+          <span class="footer-separator">|</span>
+          <a href="">LEGAL NOTICES</a>
+          <span class="footer-separator">|</span>
+          <a href="">CHILDREN'S ONLINE PRIVACY POLICY</a>
+          <span class="footer-separator">|</span>
+          <a href="">YOUR CALIFORNIA PRIVACY POLICY</a>
         </p>
       </footer>
     </div>
