Update footer links
This changelist updates the footer text for all pages, with links to the appropriate Linux Foundation locations.

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,15 +3,15 @@
       <br>
       <footer class="copyrightFooter">
         <p>
-          <a href="">TERMS OF USE</a>
+          <a href="https://lfprojects.org/policies/terms-of-use/">TERMS OF USE</a>
           <span class="footer-separator">|</span>
-          <a href="">PRIVACY POLICY</a>
+          <a href="https://lfprojects.org/policies/privacy-policy/">PRIVACY POLICY</a>
           <span class="footer-separator">|</span>
-          <a href="">LEGAL NOTICES</a>
+          <a href="https://lfprojects.org/policies/trademark-policy/">TRADEMARK POLICY</a>
           <span class="footer-separator">|</span>
-          <a href="">CHILDREN'S ONLINE PRIVACY POLICY</a>
+          <a href="https://lfprojects.org/policies/antitrust-policy/">ANTITRUST POLICY</a>
           <span class="footer-separator">|</span>
-          <a href="">YOUR CALIFORNIA PRIVACY POLICY</a>
+          <a href="https://lfprojects.org/policies/code-of-conduct/">CODE OF CONDUCT</a>
         </p>
       </footer>
     </div>
